--- a/test/uvodni.html
+++ b/test/uvodni.html
@@ -287,8 +287,7 @@ layout: default
 
                   <ul>
                   {% for post in sorted-posts limit:5 %}
-                    <li>{{ post.date | date: "%d.%m.%Y" }}
-                    <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
+                    <li>{{ post.date | date: "%d.%m.%Y" }} - <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
                   {% endfor %}
                   </ul>
                 </div>
@@ -363,8 +362,7 @@ Vyzýváme Ministerstvo práce a sociálních věcí, aby posílilo Úřady prá
 
                   <ul>
                   {% for post in sorted-posts limit:5 %}
-                    <li>{{ post.date | date: "%d.%m.%Y" }}
-                    <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
+                    <li>{{ post.date | date: "%d.%m.%Y" }} - <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
                   {% endfor %}
                   </ul>
                 </div>
@@ -442,8 +440,7 @@ Jde o skupinu, která stále zůstává bez adekvátní podpory. Přitom nejde j
 
                   <ul>
                   {% for post in sorted-posts limit:5 %}
-                    <li>{{ post.date | date: "%d.%m.%Y" }}
-                    <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
+                    <li>{{ post.date | date: "%d.%m.%Y" }} - <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
                   {% endfor %}
                   </ul>
                 </div>
@@ -517,8 +514,7 @@ Jde o skupinu, která stále zůstává bez adekvátní podpory. Přitom nejde j
 
                   <ul>
                   {% for post in sorted-posts limit:5 %}
-                    <li>{{ post.date | date: "%d.%m.%Y" }}
-                    <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
+                    <li>{{ post.date | date: "%d.%m.%Y" }} - <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
                   {% endfor %}
                   </ul>
                 </div>
