--- a/test/uvodni.html
+++ b/test/uvodni.html
@@ -456,7 +456,7 @@ Jde o skupinu, která stále zůstává bez adekvátní podpory. Přitom nejde j
                 <div class="columns medium-6">
                 <h3>Články k tématu:</h3>
 
-                  {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","sociální dopady"  %}
+                  {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","práce a sociální věci"  %}
 
                   <ul>
                   {% for post in sorted-posts limit:5 %}
