--- a/test/uvodni.html
+++ b/test/uvodni.html
@@ -63,41 +63,41 @@ layout: default
   <div class="small-12 medium-2 medium-offset-1 columns">
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
-        <img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" />      
+        <a href="zdravotnictvi.html"><img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" /></a>      
       </div>
-      <h3><a href="zdravotnictvi">Zdravotnictví</a></h3>
+      <h3><a href="zdravotnictvi.html">Zdravotnictví</a></h3>
     </div>    
   </div>
   <div class="small-12 medium-2 columns">   
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
-        <img src="/assets/img/icons/a02_ekonomika.png" style="padding: 20px" />
+        <a href="ekonomika.html"><img src="/assets/img/icons/a02_ekonomika.png" style="padding: 20px" /></a>
       </div>
-      <h3><a href="ekonomika">Ekonomika a&nbsp;finance</a></h3>
+      <h3><a href="ekonomika.html">Ekonomika a&nbsp;finance</a></h3>
     </div>
   </div>
   <div class="small-12 medium-2 columns">   
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
-        <img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" />
+        <a href="exekuce.html"><img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" /></a>
       </div>
-      <h3><a href="exekuce">Dluhy,&nbsp;exekuce, insolvence</a></h3>
+      <h3><a href="exekuce.html">Dluhy,&nbsp;exekuce, insolvence</a></h3>
     </div>
   </div>
   <div class="small-12 medium-2 columns">   
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
-        <img src="/assets/img/icons/a01_soc_syst.png" style="padding: 20px" />
+        <a href="socialni-dopady.html"><img src="/assets/img/icons/a01_soc_syst.png" style="padding: 20px" /></a>
       </div>
-      <h3><a href="socialni-dopady">Sociální dopady</a></h3>
+      <h3><a href="socialni-dopady.html">Sociální dopady</a></h3>
     </div>
   </div>
   <div class="small-12 medium-2 columns end">   
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
-        <img src="/assets/img/icons/a01_soc_syst.png" style="padding: 20px" />
+        <a href="skolstvi.html"><img src="/assets/img/icons/a01_soc_syst.png" style="padding: 20px" /></a>
       </div>
-      <h3><a href="skolstvi">Školství</a></h3>
+      <h3><a href="skolstvi.html">Školství</a></h3>
     </div>
   </div>
 </div>
@@ -240,7 +240,7 @@ layout: default
               </div>
 
               <div class="medium-12 pce-hero__cta">
-                  <a class="pce-hero__cta-item button large" href="#" target="_blank" rel="noopener">Zobrazit naše řešení pro zdravotnictví</a>
+                  <a class="pce-hero__cta-item button large" href="zdravotnictvi.html" target="_blank" rel="noopener">Zobrazit naše řešení pro zdravotnictví</a>
               </div>              
             </article>         
           </div>
@@ -314,7 +314,7 @@ layout: default
               </div>
 
               <div class="medium-12 pce-hero__cta">
-                  <a class="pce-hero__cta-item button large" href="#" target="_blank" rel="noopener">Zobrazit naše řešení pro ekonomiku a finance</a>
+                  <a class="pce-hero__cta-item button large" href="ekonomika.html" target="_blank" rel="noopener">Zobrazit naše řešení pro ekonomiku a finance</a>
               </div>              
             </article>
           </div>
@@ -388,7 +388,7 @@ layout: default
               </div>
 
               <div class="pce-hero__cta">
-                  <a class="pce-hero__cta-item button large" href="#" target="_blank" rel="noopener">Zobrazit naše řešení exekucí</a>
+                  <a class="pce-hero__cta-item button large" href="exekuce.html" target="_blank" rel="noopener">Zobrazit naše řešení exekucí</a>
               </div>              
             </article>
           </div>
@@ -466,7 +466,7 @@ Jde o skupinu, která stále zůstává bez adekvátní podpory. Přitom nejde j
               </div>
 
               <div class="pce-hero__cta">
-                  <a class="pce-hero__cta-item button large" href="#" target="_blank" rel="noopener">Zobrazit naše řešení sociálních dopadů</a>
+                  <a class="pce-hero__cta-item button large" href="socialni-dopady.html" target="_blank" rel="noopener">Zobrazit naše řešení sociálních dopadů</a>
               </div>              
             </article>
           </div>
@@ -540,7 +540,7 @@ Jde o skupinu, která stále zůstává bez adekvátní podpory. Přitom nejde j
               </div>              
 
               <div class="pce-hero__cta">
-                  <a class="pce-hero__cta-item button large" href="#" target="_blank" rel="noopener">Zobrazit naše řešení školství</a>
+                  <a class="pce-hero__cta-item button large" href="skolstvi.html" target="_blank" rel="noopener">Zobrazit naše řešení školství</a>
               </div>              
             </article>
           </div>
