--- a/test/skolstvi.html
+++ b/test/skolstvi.html
@@ -28,3 +28,57 @@ layout: default
     <h2 class="t-h4-alt">Návrh Pirátů v souvislosti s <strong>řešením dopadů pandemie COVID-19</strong> pro <strong>školství</strong>:</h2>
   </div>
 </div>
+
+Školství
+
+Základní body:
+
+Elektronické zápisy do škol
+Zachování dvou termínů u přijímacích zkoušek na SŠ
+Zachování možnosti odvolání proti rozhodnutí ředitele
+Posun termínu maturit, ne jejich rušení - podpora absolventů, kteří míří na trh práce
+Výukové skupiny pro žáky se speciálními vzdělávacími potřebami (SVP)
+Vybavení rodin ICT
+Podmínky fungování VŠ v době krize
+Revize rozpočtů v oblasti školství
+
+
+Po rozkliknutí:
+
+
+Připravili jsme pozměňovací návrhy k zákonům předkládaným MŠMT ve zrychleném režimu
+
+
+Zpracováváme analýzu rizik, na jejímž základě formulujeme návrhy opatření a změn
+Konzultujeme opatření s MŠMT a klíčovými stakeholdery ve školství
+
+Chceme usnadnit elektronizaci zápisů do škol
+
+Navrhujeme připravit návrh, který by usnadnil možnost zápisu bez fyzické přítomnosti dětí nebo jejich rodičů / zákonných zástupců. Je třeba zmapovat, zda je nutné řešit problém i z hlediska legislativního nastavení. Současná legislativa a správní řád není tomuto zcela nakloněn a bez problémů-
+
+Prosazovali jsme možnost druhého termínu u přijímacích zkoušek na SŠ a odvolání žáků vůči rozhodnutí o ne/přijetí
+
+Vládní návrh předložený ministrem Plagou počítal pouze s jedním termínem v rámci přijímacích zkoušek na SŠ v době koronaviru. 
+V souvislosti s urychlením celého procesu rovněž počítá se zrušením možnosti odvolání žáka vůči rozhodnutí ředitele. 
+Vzhledem k nestandardním a ztíženým podmínkám považujeme tento krok za rizikový a pro žáky i jejich rodiče silně znevýhodňující. 
+Připravili jsme ve Sněmovně doprovodný návrh, který počítá se zachováním druhého termínu i možnost odvolání vůči rozhodnutí a výsledku přijímacího řízení. Návrh nebyl přijat ve Sněmovně, ale MŠMT ujistilo, že problém řeší a ředitel bude mít možnost v takových případech vydat nové rozhodnutí.
+
+Požadovali jsme odložit termín konání maturitních a závěrečných zkoušek na SŠ
+Podle vládního návrhu se maturity a závěrečné zkoušky budou konat do 30. června, pokud se žáci vrátí do škol ke konci května. Pokud bude nadále v platnosti opatření MŠMT o zákazu přítomnosti žáků na školách, maturitní i závěrečné zkoušky neproběhnou a žáci budou hodnoceni na základě prospěchu z posledních 3 vysvědčení.
+V souvislosti se zrušením maturity a závěrečných zkoušek vládní návrh nereflektuje skutečnost, že součástí zkoušek je ověřování kvalifikačních předpokladů pro výkon profese a fakt, že značná část absolventů SŠ nepokračuje ve studiu a přechází na trh práce. Zvyšuje se tak riziko, že zaměstnavatelé nebudou považovat letošní absolventy za plně kvalifikované a budou tak na trhu práce znevýhodněni.
+Z tohoto důvodu jsme připravili návrh na další posunutí termínu konání maturitní zkoušky i závěrečných zkoušek.
+Návrh byl předložen na schůzi školského výboru, kde nezískal potřebnou podporu, ale nadále budeme tuto možnost prosazovat
+
+Chceme zajistit možnost distančního vzdělávání pro znevýhodněné skupiny
+
+Naším cílem je zajistit podporu pro žáky ze socio-ekonomicky znevýhodněného prostředí a pro žáky se speciálními vzdělávacími potřebami (SVP) prostřednictvím výukových skupin. Součástí podpory je rovněž možnost zajištění výpůjčky ICT do rodin, které nedisponují vybavením pro komunikaci na dálku (ideálně z pozice zřizovatele) a zajištění poradenství v této oblasti.
+
+Chceme nastavit monitoring v oblasti financování a hledání úspor v rámci resortu MŠMT
+
+Vzhledem k okolnostem lze předpokládat výrazné škrty v rozpočtech a hledání úspor finančních prostředků. Cílem je proto nastavení monitoringu v oblasti financování a nastavení rozpočtu.
+Naformulovali jsme a odeslali dopis pro ministra Plagu s dotazy, které se týkají postupu MŠMT při hledání finančních prostředků, nastavení prioritních oblastí a kritérií, kterými se MŠMT bude řídit.
+
+
+Připravili jsme pozměňovací návrhy k vládnímu návrhu upravující zákon o VŠ v dobách koronavirové krize
+Předkládáme několik pozměňovacích návrhů, které upřesňují vládní zákon
+Tyto projednáváme s MŠMT a dalšími stakeholdery v oblasti VŠ vzdělávávní 
