--- a/test/zdravotnictvi.html
+++ b/test/zdravotnictvi.html
@@ -28,3 +28,27 @@ layout: default
     <h2 class="t-h4-alt">Návrh Pirátů v souvislosti s <strong>řešením dopadů pandemie COVID-19</strong> pro <strong>zdravotnictví</strong>:</h2>
   </div>
 </div>
+
+Zdravotnictví
+kontrola - Josef P.
+
+Základní body:
+
+zajistit dostupnost zdravotnického materiálu a ochranných pomůcek
+nastavit jasný a transparentní harmonogram distribuce
+využít kapacity domácích výrobců
+zajistit / ověřit dostupnost léků v lékárnách a v nemocnicích
+realizace pandemického plánu
+ocenit zdravotní personál (správné proplácení přesčasů, dostatečný čas na regeneraci)
+
+Nová stránka po rozkliknutí:
+
+Dostupnost zdravotnického materiálu
+Naprostou prioritou je v tuto chvíli zajistit dostupnost zdravotních ochranných pomůcek a instruovat občany, instituce i firmy o nutnosti jejich používání.
+Zveřejnit jasný harmonogram, pravidla a způsob distribuce OOP včetně doplňování.
+Podpořit kapacity výroby OOP v ČR, pokud je to možné.
+Pokud je reálným cílem zajistit roušky “všem občanům”, kvůli snižování možnosti šíření viru je třeba zveřejnit plánovaný distribuční model
+Léky v lékárnách a nemocnicích
+Vzhledem k výrobní kapacitě mimo EU je naprosto nezbytné jasně uvést, které léky jsou k dispozici ve skladech v ČR a u kterých může v nastávajících měsících nastat problém s dostupností.
+Zmapovat, jaké léky bude stát potřebovat pro léčbu osob s koronavirem - dodat analýzu jejich množství a dostupnosti.
+Zajistit analýzu rizik dlouhodobého nedostatku vybraných léčiv z důvodu možných výpadků výrobních kapacit v Číně a Indii, a to i pro další typy léčiv - tyto léky je zapotřebí shánět dnes.
