--- a/test/exekuce.html
+++ b/test/exekuce.html
@@ -28,3 +28,46 @@ layout: default
     <h2 class="t-h4-alt">Návrh Pirátů v souvislosti s <strong>řešením dopadů pandemie COVID-19</strong> pro <strong>dluhy, exekuce a insolvence</strong>:</h2>
   </div>
 </div>
+
+Dluhy, exekuce, insolvence
+Základní body:
+
+zúžit na 5 ? hlavních highlights:
+
+Plošné zastavení nařizování exekucí, případně zastavení mobiliárních exekucí
+Místní příslušnost exekutorů: princip 1 dlužník = 1 exekutor v místě bydliště
+Splácet nejdřív jistinu pak úrok
+Zvýšení minimální jistiny pro dražbu obydlí ze 30 tisíc na 100 tisíc korun 
+Snížení státem uvalené daně z přidané hodnoty na odměny exekutorů
+Zastavování tzv. “nevymožitelných exekucí,” kde se za poslední 3 roky nepodařilo nic vymoci
+Vznik chráněného bankovního účtu
+
+Po rozkliknutí:
+
+teze:
+plošné zastavení nařizování exekucí, případně zastavení mobiliárních exekucí
+zavedení místní příslušnosti exekutorů podle principu 1 dlužník = 1 exekutor v místě bydliště
+přednostní splacení jistiny místo úroků
+zvýšení minimální jistiny pro dražbu obydlí ze 30 tisíc na 100 tisíc korun 
+vyjmutí daňových bonusů či odstupného při výpovědi z exekuovatelných příjmů
+snížení státem uvalené daně z přidané hodnoty na odměny exekutorů
+urychlení implementace evropské směrnice o oddlužení OSVČ
+rozšíření možnosti přerušit oddlužení i pro insolvence schválené před přijatou novelou z roku 2019
+posílení Úřadů práce personálními kapacitami pro zvládnutí očekávaného náporu
+zachování možnosti splátek hypoték a dalších půjček v případě platného připojištění pro případy neschopnosti splácet na straně spotřebitele
+odpuštění nájmů v obecních prostorách určených pro podnikání
+zastavování tzv. “nevymožitelných exekucí,” kde se za poslední 3 roky nepodařilo nic vymoci
+vznik chráněného bankovního účtu
+
+
+Vyzýváme Ministerstvo práce a sociálních věcí, aby posílilo Úřady práce, které v této chvíli nestíhají vyplácet příspěvky. Nadále upozorňujeme, že v regionech se silnou koncentrací dlužníků může dojít vlivem zhroucení černého pracovního trhu k masivním sociálním problémům, které mohou přerůst až v občanské nepokoje a rabování. Vládě České republiky doporučujeme, aby si pro tyto krizové případy přichystala plán a zároveň doporučujeme několik opatření, které by mohly eskalaci situace předejít.
+
+Dluhy:
+Vítáme, že došlo k odkladu splátek hypoték, nicméně mnoho spotřebitelů má připojištěnou schopnost splácet. Banky pojistkou často podmiňují poskytnutí hypotéky (nezřídkakdy zřizuje pojištění dceřiná společnost banky). Spotřebitelé s připojištěním by měli mít možnost odklad odmítnout. V opačném případě si spotřebitelé platili pojistnou službu zbytečně a stát jim tak chtě nechtě oddálí datum splacení dluhu. Banky pak paradoxně profitují ze zákonného omezení. 
+
+Rovněž apelujeme na obce, aby po dobu krize promíjely nájmy v obecních prostorách s uzavřenými provozovnami soukromých nájemníků. Vznik dluhu během krizového období, kdy stát zasahuje do svobody pohybu a podnikání, může být pro živnostníky likvidační. Obec by se tímto způsobem připravila o zdroj příjmu a zároveň si vytvořila provozní náklady bez krytí, neboť lze předpokládat, že v následné hospodářské krizi bude poptávka po prostorách nižší.  
+
+Exekuce:
+Doporučujeme ve urychleném řízení zavést místní příslušnost exekutorů dle principu 1 dlužník = 1 exekutor v místě bydliště včetně zastavování exekucí starších 3 let a chráněného účtu. Tato opatření zpřehlednění a fakticky zlevní proces vymáhání. Povinní dokáží rychleji splatit původní dluh a věřitelům to v této složité situace pomůže čelit výpadku příjmů. Krizové zmrazení trhu s exekucemi je vhodné pro provedení potřebných změn - exekutoři si mohou předat spisy a zvyknout si na nový systém. 
+
+Je zapotřebí na základě  § 54 Exekučního řádu odložit výkony exekucí po dobu trvání krize zejména u povinných, kteří důsledkem šíření Koronaviru a vládních opatření přišli o zaměstnání nebo jim byl výrazně pokrácen příjem domácnosti. V opačném případě riskujeme zhroucení řady rodinných rozpočtů, nárůst výdajů na straně státu a rozšiřování patologických sociálních jevů (bezdomovectví, závislosti, sebevraždy, rozvody apod.). U zbylých případů doporučujeme, aby byli exekutoři shovívaví při plánování splátkových kalendářů a přihlíželi k aktuální situaci jak na straně povinného, tak na straně oprávněného.
